Make sure the size of the car is not too big and make sure the car is on the top left of the screen. #1

--- a/styles.css
+++ b/styles.css
@@ -3,5 +3,5 @@ body {
 }
 
 .car {
-  height: 135px;
+  height: 145px;
 }
